vbnc/vbnc/vbnc/tests/Errors/32007-3.vb
Class T
    Const M_Char_Char As Char = CSByte(12)
End Class